# cmake_hello_world

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hellolib.cpp  hellolib.h  main.cpp  tests.cpp
